<resources>
    <string name="app_name">MyConstraint Layout</string>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="send_button">Send</string>
    <string name="burden">Post Burden</string>
    <string name="title">Burder title</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>

</resources>